--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,33 @@
   padding: 0;
   margin: 0;
 }
+
+@font-face {
+  font-family: 'Roboto';
+  src: url(./fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Roboto-black';
+  src: url(./fonts/Roboto-Black.ttf);
+}
+
+@font-face {
+  font-family: 'Roboto-light';
+  src: url(./fonts/Roboto-Light.ttf);
+}
+
+@font-face {
+  font-family: 'Roboto-thin';
+  src: url(./fonts/Roboto-Thin.ttf);
+}
+
+@font-face {
+  font-family: 'Roboto-bold';
+  src: url(./fonts/Roboto-Bold.ttf);
+}
+
+#root {
+  width: 1900px;
+  margin: 0 auto;
+}
