--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -58,6 +58,10 @@
   background-color: rgba(41, 41, 41, 0.8);
 }
 
+.dir-btn:hover {
+  opacity: 0.9;
+}
+
 .dir-btn::before {
   position: absolute;
   content: '';
@@ -140,4 +144,9 @@
   text-transform: uppercase;
   color: #292929;
   cursor: pointer;
+}
+
+.cal-btn:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.3s;
 }
