--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -150,3 +150,11 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: box-shadow 0.3s;
 }
+
+.cal-btn:focus {
+  color: #FFA800;
+  border: 1px solid #FFA800;
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-color: inherit;
+}
