--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -53,3 +53,194 @@
 .about-text-third {
   font-family: 'Roboto-bold';
 }
+
+.main-how {
+  position: relative;
+  height: 575px;
+  background-image: url(../images/how.png);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-color: #D0984C;
+  background-blend-mode: multiply;
+  opacity: 0.8;
+}
+
+.how-title {
+  display: flex;
+  width: 100%;
+}
+
+.how-title-text {
+  margin: 70px auto auto 250px;
+  width: 347px;
+  height: 41px;
+  font-family: 'Roboto-medium';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 42px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.how-title-btn {
+  width: 325px;
+  height: 60px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 5px;
+  margin: 60px 270px auto auto;
+  font-family: 'Roboto-bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: inherit;
+  cursor: pointer;
+}
+
+.how-title-btn:hover {
+  background-color: #FFCA62;
+  color: #2D2B2F;
+  transition: color 0.3s linear;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.how-title-btn:focus {
+  background-color: #ffffff;
+  color: #2D2B2F;
+}
+
+.how-content {
+  display: flex;
+  margin: 97px 465px auto 480px;
+  justify-content: space-between;
+}
+
+.how-content-item {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.how-content-text {
+  margin-top: 30px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.how-image-first, .how-image-second, .how-image-third {
+  width: 162px;
+  height: 162px;
+}
+
+.how-image-first {
+  background-image: url(../images/first.png);
+}
+
+.how-image-second {
+  background-image: url(../images/second.png);
+}
+
+.how-image-third {
+  background-image: url(../images/third.png);
+}
+
+.main-reviews {
+  height: 600px;
+}
+
+.reviews-title {
+  margin: 150px auto auto 252px;
+  font-family: 'Roboto-medium';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 42px;
+  text-transform: uppercase;
+  color: #292929;
+}
+
+.reviews {
+  display: flex;
+  margin: 70px 295px auto 255px;
+}
+
+.review {
+  display: flex;
+  margin-right: 85px;
+}
+
+.review-image {
+  width: 207px;
+  height: 207px;
+  margin-right: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.review-content {
+
+}
+
+.review-name {
+  font-family: 'Roboto-medium';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.review-text {
+  width: 400px;
+  margin-top: 30px;
+  font-family: 'Roboto-light';
+  font-style: italic;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  color: #918F94;
+}
+
+.review-text::after, .review-text::before {
+  content: '"';
+  font-family: 'Roboto-medium';
+  font-style: italic;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 42px;
+  color: #928F94;
+}
+
+.review-text::after {
+  vertical-align: top;
+}
+
+.reviews-carousel {
+  display: flex;
+  margin: 137px 896px auto 884px;
+  width: 140px;
+  justify-content: space-between;
+}
+
+.carousel-dots {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #E5E5E5;
+}
+
+.active-dot {
+  border-radius: 50%;
+  transform: scale(1.2);
+  background-color: #C4C4C4;;
+}
