--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -31,6 +31,10 @@
   border-bottom: 1px solid #C4C4C4;
 }
 
+.cal-month > button {
+  cursor: pointer;
+}
+
 .prev-month, .next-month {
   width: 50px;
   border: none;
@@ -58,7 +62,42 @@
   align-self: center;
 }
 
+.cal-table {
+  border-collapse: collapse;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  width: 100%;
+  height: 79%;
+  text-align: center;
+}
 
+.cal-table > tbody > tr > td {
+  cursor: pointer;
+}
+
+.cal-table > tbody > tr > td:hover {
+  background-color: #C4C4C4;
+}
+
+.cal-table > thead {
+  height: 30px;
+}
+
+.date-other-month {
+  color: #00000030;
+}
+
+.date-today {
+  box-sizing: border-box;
+  background: rgba(255, 168, 0, 0.31);
+  border: 2px solid #FFA800;
+  border-radius: 5px;
+}
+
+.date-week-end {
+  background-color: #00000012;
+}
 
 .none {
   display: none;
