--- a/src/styles/searchwidget.css
+++ b/src/styles/searchwidget.css
@@ -41,6 +41,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+  text-transform: capitalize;
   color: #292929;
   border: none;
   border-radius: 3px;
