--- a/src/styles/searchwidget.css
+++ b/src/styles/searchwidget.css
@@ -59,6 +59,7 @@
   border: none;
   cursor: pointer;
   margin: auto 7px;
+  vertical-align: super;
   width: 24px;
   height: 24px;
   opacity: 0.4;
@@ -126,7 +127,7 @@
 }
 
 .date-input-to {
-  margin-left: auto;
+  margin-left: 38px;
 }
 
 .date-input-from, .date-input-to {
@@ -171,3 +172,25 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-color: inherit;
 }
+
+.search-transform > div > .search-direction {
+  margin: 30px 38px 0 38px;
+}
+
+.search-transform > div > .search-date {
+  margin: 30px auto 0 0;
+}
+
+.search-transform > .search-inputs {
+  position: relative;
+  display: flex;
+}
+
+.search-transform > .search-btn {
+  position: relative;
+  margin: 48px 38px auto auto;
+}
+
+/* .search-transform > .header-endline {
+  top: 547px;
+} */
