--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -126,7 +126,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: url(../images/main-search.png);
+  background-image: url(../images/main-search.png);
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.89;
