--- a/src/styles/search-progress.css
+++ b/src/styles/search-progress.css
@@ -1,5 +1,12 @@
 .search-progress {
+  display: flex;
   width: 100%;
   height: 774px;
   background-color: #3E3C41;
+}
+
+.search-progress > img {
+  margin: auto;
+  width: 500px;
+  height: 500px;
 }
