--- a/src/styles/search-progress.css
+++ b/src/styles/search-progress.css
@@ -10,3 +10,12 @@
   width: 500px;
   height: 500px;
 }
+
+.search-progress-line {
+  position: absolute;
+  width: 100%;
+  height: 8px;
+  left: 0px;
+  top: 546px;
+  background: #FFA800;
+}
