--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -117,7 +117,7 @@
   position: relative;
   width: 100%;
   height: 554px;
-  padding-bottom: 90px;
+  /* padding-bottom: 90px; */
 }
   
 .header-transform::before {
@@ -137,8 +137,8 @@
   display: flex;
   flex-direction: column;
   width: 1490px;
-  height: 285px;
-  margin: auto auto 8px auto;
+  height: 290px;
+  margin: auto auto 0px auto;
   background-color: #0000009e;
   z-index: 1;
 }
