--- a/src/styles/progress-line.css
+++ b/src/styles/progress-line.css
@@ -1,35 +1,19 @@
 .progress-line {
   display: flex;
-  position: absolute;
-  z-index: 1;
   width: 100%;
   height: 100px;
   background-color: #3E3C41;
-  top: 545px;
 }
 
 .line-step-one, .line-step-two, .line-step-three, .line-step-four {
-  display: flex;
   position: relative;
-  width: 342px;
+  width: 324px;
   display: flex;
   align-items: center;
 }
 
-.line-step-one {
-  margin-right: 30px;
-}
-
-.line-step-two {
-  margin-right: 30px;
-}
-
-.line-step-three {
-  margin-right: 30px;
-}
-
-.line-step-four {
-  margin-right: auto;
+.line-step-two, .line-step-three, .line-step-four {
+  margin-left: 37px;
 }
 
 .step-number {
@@ -63,9 +47,11 @@
   line-height: 35px;
   color: #FFFFFF;
 }
+
 .step-arrow {
   position: absolute;
-  left: 310px;
+  left: 290px;
+  z-index: 1;
 }
 
 .arrow-top {
@@ -82,15 +68,22 @@
   transform: skewX(-35deg);
 }
 
-.steps-start {
-  height: 100%;
-  width: 222px;
+.step-arrow-out {
+  position: absolute;
+  width: 40px;
+  height: 100px;
+  left: -40px;
 }
 
-.steps-end {
+.steps-start, .steps-end {
   height: 100%;
-  width: 223px;
+  width: 13.1%;
 }
+
+/* .steps-end {
+  height: 100%;
+  width: 222px;
+} */
 
 .current-step {
   background-color: #FFA800;
