--- a/src/styles/city.css
+++ b/src/styles/city.css
@@ -28,7 +28,7 @@
   padding: 5px 20px;
   box-sizing: border-box;
   width: 325px;
-  min-height: 57px;
+  /* min-height: 57px; */
   background: #F5F4F6;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
