--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -3,7 +3,6 @@
   color: #ffffff;
   background-color: #3E3C41;
   width: 360px;
-  height: 1524px;
 }
 
 .filter-line {
@@ -179,7 +178,7 @@
   font-weight: 400;
   font-size: 30px;
   line-height: 35px;
-  margin: 37px auto 11px 32px;
+  margin: 35px auto 10px 32px;
 }
 
 .price-range {
@@ -197,10 +196,9 @@
   margin-bottom: 5px;
 }
 
-.range-input-in {
+.range-input-out, .range-input-in {
   width: 295px;
   height: 20px;
-  transform: rotate(0deg);
   background: transparent;
   appearance: none;
   position: absolute;
@@ -209,15 +207,8 @@
   z-index: 1;
 }
 
-.range-input-out {
-  width: 295px;
-  height: 20px;
-  background: transparent;
-  appearance: none;
-  position: absolute;
-  border-radius: 8px;
-  pointer-events: none;
-  z-index: 1;
+.range-input-in {
+  transform: rotate(0deg);
 }
 
 .range-input-in::-webkit-slider-thumb, .range-input-out::-webkit-slider-thumb {
@@ -245,12 +236,12 @@
   position: relative;
   width: 295px;
   height: 20px;
-
   box-sizing: border-box;
   border: 1px solid #C4C4C4;
   border-radius: 9px;
   background-color: transparent;
 }
+
 .range-line {
   position: relative;
   width: 280px;
@@ -303,93 +294,140 @@
 }
 
 .filter-time-title {
+  display: flex;
+  margin: 27px 34px 34px 32px;
+}
 
+.filter-time-text {
+  font-family: 'Roboto-bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+}
+
+.filter-time-there-img, .filter-time-back-img {
+  display: flex;
+  width: 32px;
+  height: 26px;
+  margin-right: 12px;
+  align-self: center;
 }
 
 .filter-time-there-img {
-
+  background-image: url(../images/Subtract.png);
 }
 
-.filter-time-title {
-
+.filter-time-back-img {
+  background-image: url(../images/Subtract-back.png);
 }
 
-.filter-time-close {
+.filter-time-close-down, .filter-time-close-up {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  margin-left: auto;
+  align-self: center;
+  cursor: pointer;
+}
 
+.filter-time-close-up {
+  background-image: url(../images/show-down.png);
+}
+
+.filter-time-close-down {
+  background-image: url(../images/show-up.png);
 }
 
 .time-range-there {
-
+  margin: 0 35px 45px 25px;
 }
 
 .time-range-text {
-
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #E5E5E5;
+  margin-bottom: 15px;
 }
 
-
+.text-arrival {
+  padding-left: 105px;
+}
 
 .time-range-number {
-
+  display: flex;
+  margin-top: 10px;
 }
 
-.time-range-there {
-
+.range-input-times {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 300px;
+  height: 10px;
+  box-sizing: border-box;
+  border: 1px solid #C4C4C4;
+  border-radius: 8px;
+  background-color: transparent;
 }
 
-.time-range-text {
-
+.range-input-time-out, .range-input-time-in {
+  width: 300px;
+  height: 10px;
+  background: transparent;
+  appearance: none;
+  position: absolute;
+  border-radius: 8px;
+  pointer-events: none;
+  z-index: 1;
 }
 
-
-
-.time-range-number {
-
+.range-input-time-in {
+  transform: rotate(0deg);
 }
+
+.range-input-time-in::-webkit-slider-thumb, .range-input-time-out::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  cursor: pointer;
+  pointer-events: all;
+}
+
+.range-input-time-in::-moz-range-thumb, .range-input-time-out::-moz-range-thumb {
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  cursor: pointer;
+  pointer-events: all;
+}
+
+.range-time-line {
+  position: relative;
+  width: 280px;
+  height: 10px;
+  z-index: 0;
+}
+
+.range-time-line-body {
+  background-color: #FFA800;
+  position: absolute;
+  top: -1px;
+  height: 10px;
+  z-index: 1;
+}
+
 
 .filter-time-back {
 
 }
 
-.filter-time-title {
-
-}
-
-.filter-time-back-img {
-
-}
-
-.filter-time-title {
-
-}
-
-.filter-time-close {
-
-}
-
 .time-range-back {
-
-}
-
-.time-range-text {
-
-}
-
-
-
-.time-range-number {
-
-}
-
-.time-range-back {
-
-}
-
-.time-range-text {
-
-}
-
-
-
-.time-range-number {
-
+  margin: 0 35px 45px 25px;
 }
