--- a/src/styles/route.css
+++ b/src/styles/route.css
@@ -1,3 +1,12 @@
 .main-route {
-display: flex;
+  display: flex;
+  background-color: #E5E5E5;
+}
+
+.left-side {
+  margin: 95px 85px 190px 260px;
+}
+
+.right-side {
+
 }
