--- a/src/styles/last-routes.css
+++ b/src/styles/last-routes.css
@@ -24,3 +24,93 @@
   border: 1px solid #C4C4C4;
   box-shadow: 0px 2px 2px rgba(62, 60, 65, 0.25);
 }
+
+.route-from-to {
+  display: flex;
+  justify-content: space-between;
+  height: 70px;
+  margin: 18px 20px 24px 20px;
+}
+
+.route-from {
+
+}
+
+.route-city-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  color: #292929;
+}
+
+.route-station-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #928F94;
+  width: 115px;
+}
+
+.route-to {
+  text-align: end;
+}
+
+.route-facilities-price {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 12px 14px 18px;
+}
+
+.route-facilities {
+  width: 92px;
+  height: 20px;
+  background-image: url(../images/3in1.png);
+  align-self: center;
+}
+
+.facilities-wifi {
+
+}
+
+.facilities-express {
+
+}
+
+.facilities-coffee {
+
+}
+
+.route-start-price {
+  display: flex;
+  align-items: baseline;
+}
+
+.price-start-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: right;
+  color: #928F94;
+}
+
+.price-start-number {
+  font-family: 'Roboto-bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 35px;
+  color: #FFA800;
+  margin: 0 5px;
+}
+
+.sign-rub {
+  width: 20px;
+  height: 25px;
+  background-image: url(../images/sign.png);
+}
