--- a/src/styles/last-routes.css
+++ b/src/styles/last-routes.css
@@ -23,6 +23,7 @@
   background: #FFFFFF;
   border: 1px solid #C4C4C4;
   box-shadow: 0px 2px 2px rgba(62, 60, 65, 0.25);
+  margin-bottom: 17px;
 }
 
 .route-from-to {
@@ -37,6 +38,7 @@
 }
 
 .route-city-text {
+  text-transform: capitalize;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
@@ -52,7 +54,6 @@
   font-size: 16px;
   line-height: 19px;
   color: #928F94;
-  width: 115px;
 }
 
 .route-to {
