--- a/src/styles/train-route.css
+++ b/src/styles/train-route.css
@@ -159,6 +159,7 @@
 }
 
 .amount-seat {
+  position: relative;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -167,7 +168,37 @@
   color: #FFA800;
   margin-right: 15px;
   margin-left: auto;
+  cursor: pointer;
 }
+
+.seat-up-down {
+  position: absolute;
+  width: 276px;
+  height: 93px;
+  background-color: #E5E5E5;
+  border-radius: 5px;
+  left: -121px;
+  z-index: 1;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.seat-up-down::after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: -4px;
+  left: 125px;
+  transform: rotate(45deg);
+  background-color: #E5E5E5;
+}
+
+.seat-up, .seat-down {
+  display: flex;
+  align-items: baseline;
+  margin: 9px 17px 0 32px;
+}
+
 
 .ticket-start-price {
   display: flex;
@@ -183,7 +214,7 @@
   color: #928F94;
 }
 
-.ticket-start-number {
+.ticket-start-number, .seat-ticket-start-number {
   font-family: 'Roboto-bold';
   font-style: normal;
   font-weight: 700;
@@ -191,6 +222,10 @@
   line-height: 28px;
   color: #2D2B2F;
   margin: 0 5px;
+}
+
+.seat-ticket-start-number {
+  margin-left: 25px;
 }
 
 .sign-rub {
