--- a/src/styles/train-route.css
+++ b/src/styles/train-route.css
@@ -134,7 +134,8 @@
 /* tickets-seats */
 
 .train-tickets {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .train-tickets-options {
@@ -193,7 +194,7 @@
   background-color: #E5E5E5;
 }
 
-.seat-up, .seat-down {
+.seat-up {
   display: flex;
   align-items: baseline;
   margin: 9px 17px 0 32px;
@@ -222,6 +223,8 @@
   line-height: 28px;
   color: #2D2B2F;
   margin: 0 5px;
+  width: 60px;
+  text-align: center;
 }
 
 .seat-ticket-start-number {
