--- a/src/styles/train-route.css
+++ b/src/styles/train-route.css
@@ -174,11 +174,10 @@
 
 .seat-up-down {
   position: absolute;
-  width: 276px;
-  height: 93px;
+  width: 260px;
   background-color: #E5E5E5;
   border-radius: 5px;
-  left: -121px;
+  left: -110px;
   z-index: 1;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -189,7 +188,7 @@
   width: 10px;
   height: 10px;
   top: -4px;
-  left: 125px;
+  left: 115px;
   transform: rotate(45deg);
   background-color: #E5E5E5;
 }
@@ -197,7 +196,7 @@
 .seat-up {
   display: flex;
   align-items: baseline;
-  margin: 9px 17px 0 32px;
+  margin: 9px 17px 9px 32px;
 }
 
 
@@ -228,7 +227,7 @@
 }
 
 .seat-ticket-start-number {
-  margin-left: 25px;
+  margin-left: auto;
 }
 
 .sign-rub {
