--- a/src/styles/train-route.css
+++ b/src/styles/train-route.css
@@ -245,8 +245,19 @@
   margin-right: 28px;
 }
 
+.train-facilities-all {
+
+}
+
 .train-facilities-wifi {
 
+}
+
+.train-facilities-express {
+
+}
+.train-facilities-coffee {
+  
 }
 
 .train-choice-btn {
