--- a/src/styles/search-widget.css
+++ b/src/styles/search-widget.css
@@ -36,6 +36,7 @@
 }
 
 .dir-input-from, .dir-input-to {
+  position: relative;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
@@ -53,6 +54,29 @@
   background-repeat: no-repeat;
   background-position: center right 17px;
 }
+
+/* .search-dir-inputs::before {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 2px solid #292929;
+  border-color: #292929 transparent #292929 transparent;
+  border-radius: 50%;
+  z-index: 2;
+  top: 138px;
+  left: 260px;
+  animation: loading 1s infinite linear;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
 
 .dir-btn {
   position: relative;
