--- a/src/styles/train-route.css
+++ b/src/styles/train-route.css
@@ -178,6 +178,7 @@
   background-color: #E5E5E5;
   border-radius: 5px;
   left: -110px;
+  top: 25px;
   z-index: 1;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
