--- a/src/styles/last-routes.css
+++ b/src/styles/last-routes.css
@@ -69,7 +69,7 @@
 .route-facilities {
   width: 92px;
   height: 20px;
-  background-image: url(../images/3in1.png);
+  background-image: url(../images/facilities.png);
   align-self: center;
 }
 
