--- a/src/styles/coaches.css
+++ b/src/styles/coaches.css
@@ -403,10 +403,6 @@
   color: #ffffff;
 }
 
-.coach-description {
-
-}
-
 .coach-description-prices {
   display: flex;
   height: 160px;
@@ -592,12 +588,167 @@
   font-size: 16px;
   line-height: 19px;
   color: #292929;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.coach-description {
+  border-bottom: 1px dashed #C4C4C4;
+  margin-bottom: 33px;
 }
 
 .coach-seats-info {
 
 }
 
-.seats-info-img {
+.seats-info-first, .seats-info-second, .seats-info-third, .seats-info-fourth {
+  display: flex;
+  position: relative;
+  width: 920px;
+  height: 145px;
+  margin: 0 17px 80px 21px;
+}
 
+.seats-info-first {
+  background-image: url(../images/coach-first.png);
+}
+
+.seats-info-second {
+  background-image: url(../images/coach-second.png);
+}
+
+.seats-info-third {
+  background-image: url(../images/coach-third.png);
+}
+
+.seats-info-fourth {
+  background-image: url(../images/coach-fourth.png);
+}
+
+
+.coach-button, .coach-button-inactive {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 222px;
+  height: 60px;
+  font-family: 'Roboto-bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #FFA800;
+  border: none;
+  border-radius: 5px;
+  margin: 93px 0 124px auto;
+  cursor: pointer;
+}
+
+.coach-button:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: all 300ms ease-in-out;
+} 
+
+.coach-button:focus {
+  background-color: transparent;
+  border: 1px solid #FFA800;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  color: #FFA800;
+  transition: all 300ms ease-in-out;
+} 
+
+.coach-button-inactive {
+  background-color: #928F94;
+}
+
+.scheme-seats-first, .scheme-seats-second, .scheme-seats-third, .scheme-seats-fourth {
+  position: absolute;
+}
+
+.scheme-seats-first {
+  border: 1px solid black;
+  width: 715px;
+  height: 112px;
+  top: 26px;
+  left: 131px;
+}
+
+.scheme-seats-second {
+  border: 1px solid black;
+  width: 715px;
+  height: 112px;
+  top: 26px;
+  left: 131px;
+}
+
+.scheme-seats-third {
+  box-sizing: border-box;
+  border: 1px solid black;
+  width: 89.63px;
+  height: 114px;
+  top: 26px;
+  left: 131px;
+}
+
+.scheme-seats-fourth {
+  border: 1px solid black;
+  width: 715px;
+  height: 112px;
+  top: 26px;
+  left: 131px;
+}
+
+
+
+.seat-top-left {
+  position: absolute;
+  background-color: #f55858;
+  width: 27px;
+  height: 32px;
+  top: 1px;
+  left: 1px;
+}
+.seat-bot-left {
+  position: absolute;
+  background-color: #a4f558;
+  width: 27px;
+  height: 32px;
+  top: 33px;
+  left: 1px;
+}
+.seat-side-left {
+  position: absolute;
+  background-color: rgb(31, 130, 223);
+  width: 44px;
+  height: 25px;
+  top: 86px;
+  left: 1px;
+}
+
+.seat-top-right {
+  position: absolute;
+  background-color: #f5585869;
+  width: 27px;
+  height: 32px;
+  top: 1px;
+  left: 62px;
+}
+.seat-bot-right {
+  position: absolute;
+  background-color: #a4f55873;
+  width: 27px;
+  height: 32px;
+  top: 33px;
+  left: 62px;
+}
+.seat-side-right {
+  position: absolute;
+  background-color: rgba(31, 130, 223, 0.363);
+  width: 44px;
+  height: 25px;
+  top: 86px;
+  left: 45px;
 }
