--- a/src/styles/city.css
+++ b/src/styles/city.css
@@ -25,10 +25,13 @@
 }
 
 .city-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 10px 20px;
   box-sizing: border-box;
   width: 325px;
-  /* min-height: 57px; */
+  min-height: 57px;
   background: #F5F4F6;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
@@ -42,7 +45,6 @@
   line-height: 21px;
   font-variant: small-caps;
   color: #292929;
-  margin-bottom: 3px;
   cursor: pointer;
 }
 
