--- a/src/styles/coaches.css
+++ b/src/styles/coaches.css
@@ -501,7 +501,7 @@
   display: flex;
 }
 
-.service-air, .service-wifi, .service-linens, .service-coffee, .service-air-selected, .service-wifi-selected, .service-linens-selected, .service-coffee-selected {
+.service-wifi-empty, .service-linens-empty, .service-air, .service-wifi, .service-linens, .service-coffee, .service-air-selected, .service-wifi-selected, .service-linens-selected, .service-coffee-selected {
   display: flex;
   position: relative;
   width: 36px;
@@ -514,18 +514,32 @@
   cursor: pointer;
 }
 
-.service-air-selected, .service-wifi-selected, .service-linens-selected, .service-coffee-selected {
+.service-wifi-empty {
+  background-image: url(../images/wifi-black.png);
+  cursor: not-allowed;
+  opacity: 0.3;
+}
+
+.service-linens-empty {
+  background-image: url(../images/linens-black.png);
+  cursor: not-allowed;
+  opacity: 0.3;
+}
+
+.service-air-selected, .service-wifi-selected, .service-linens-selected {
   background-color: #FDB935;
   border: none;
 }
 
-.service-air:hover, .service-wifi:hover, .service-linens:hover, .service-coffee:hover {
+.service-wifi:hover, .service-linens:hover {
   background-color: #FFA800;
   transition: background-color 300ms ease;
 }
 
 .service-air {
   background-image: url(../images/air-black.png);
+  cursor: not-allowed;
+  opacity: 0.3;
 }
 
 .service-wifi {
@@ -538,6 +552,8 @@
 
 .service-coffee {
   background-image: url(../images/cup-black.png);
+  cursor: not-allowed;
+  opacity: 0.3;
 }
 
 .service-air-selected {
@@ -564,13 +580,19 @@
 
 .service-description {
   position: absolute;
-  width: 130px;
-  height: 32px;
-  left: -45px;
+  left: -32px;
   top: 40px;
   background: #E5E5E5;
   border-radius: 5px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  padding: 3px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #292929;
 }
 
 .coach-seats-selected {
