--- a/src/styles/coaches.css
+++ b/src/styles/coaches.css
@@ -19,19 +19,34 @@
   background-color: #FFFFFF;
   border: 1px solid #C4C4C4;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  margin-bottom: 30px;
 }
 
-.choice-train {
+.choice-train-left {
   display: flex;
   margin: 36px auto 32px 19px;
 }
 
-.choice-train-img {
+.choice-train-right {
+  display: flex;
+  margin: 36px 19px 32px auto;
+}
+
+.choice-train-img-left, .choice-train-img-right {
   display: flex;
   width: 76px;
   height: 60px;
+}
+
+.choice-train-img-left {
   margin-right: 10px;
   background-image: url(../images/Subtract-right.png);
+}
+
+.choice-train-img-right {
+  margin-right: 10px;
+  margin-left: auto;
+  background-image: url(../images/Subtract-left.png);
 }
 
 .choice-train-btn {
@@ -675,7 +690,7 @@
   background-color: #FFA800;
   border: none;
   border-radius: 5px;
-  margin: 93px 0 124px auto;
+  margin: 63px 0 124px auto;
   cursor: pointer;
 }
 
