input date passengers

--- a/src/styles/passenger.css
+++ b/src/styles/passenger.css
@@ -12,6 +12,12 @@
   border-bottom: 1px dashed #928F94;
 }
 
+.pass-header-plus {
+  display: flex;
+  height: 107px;
+  background-color: #FFFFFF;
+}
+
 .pass-header-up, .pass-header-down {
   display: flex;
   width: 32px;
@@ -53,11 +59,16 @@
 }
 
 .pass-choice-age {
-  margin: 38px auto auto 36px;
+  position: relative;
+  margin: 38px auto auto 35px;
 }
 
 
 .pass-select {
+  display: flex;
+  align-items: center;
+  position: relative;
+  box-sizing: border-box;
   width: 280px;
   height: 50px;
   font-family: 'Roboto';
@@ -69,6 +80,48 @@
   border: 1px solid #928F94;
   border-radius: 5px;
   padding-left: 10px;
+  cursor: pointer;
+}
+
+.pass-select::before {
+  content: '';
+  position: absolute;
+  left: 250px;
+  width: 12px;
+  height: 5px;
+  background-image: url(../images/select.png);
+}
+
+.list-age-select {
+  position: absolute;
+  width: 280px;
+  height: 95px;
+  top: -1px;
+  background-color: #F4F3F6;
+  border-radius: 5px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.select-age, .select-child {
+  display: flex;
+  align-items: center;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #292929;
+  height: 50%;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+.select-age {
+  border-bottom: 1px solid #C4C4C4;
+}
+
+.select-child {
+
 }
 
 .pass-form-names {
@@ -129,7 +182,7 @@
   margin-right: 35px;
 }
 
-.gender-man, .gender-woman {
+.gender-human, .gender-choice-color {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,10 +199,6 @@
 
 .gender-choice-color {
   background-color: #FFA800;
-}
-
-.gender-woman {
-  border-left: 1px solid #928F94;
 }
 
 .pass-birth-date {
@@ -184,34 +233,157 @@
 }
 
 .pass-form-check {
+  display: flex;
+  margin: 45px auto 30px 35px;
+}
 
+.pass-check-input, .pass-check-input-ok {
+  width: 28px;
+  height: 28px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  margin-right: 20px;
 }
 
 .pass-check-input {
+  border: 1px solid #928F94;
+}
 
+.pass-check-input-ok {
+  border: 1px solid #FFA800;
+  background-image: url(../images/ok.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .pass-check-text {
-
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #292929;
+  align-self: center;
 }
 
-.pass-form-docs {
+/* forms - docs */
 
+.pass-form-docs {
+  display: flex;
+  border-top: 1px dashed #928F94;
+  border-bottom: 1px dashed #928F94;
 }
 
 .pass-docs-select {
+  position: relative;
+  margin: 35px 35px 33px 35px;
+}
 
+.select-docs, .select-doc-passport, .select-doc-birth {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #292929;
 }
 
 .select-docs {
+  display: flex;
+  position: relative;
+  align-items: center;
+  box-sizing: border-box;
+  cursor: pointer;
+  padding-right: 90px;
+
+  min-width: 205px;
+  height: 50px;
+  border: 1px solid #928F94;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.select-docs::before {
+  content: '';
+  position: absolute;
+  right: 12px;
+  width: 12px;
+  height: 5px;
+  background-image: url(../images/select.png);
+}
+
+.list-docs-select, .list-docs-select-long {
+  position: absolute;
+  height: 95px;
+  top: 28px;
+  background-color: #F4F3F6;
+  border-radius: 5px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.list-docs-select {
+  width: 205px;
+}
+
+.list-docs-select-long {
+  width: 334px;
+}
+
+.select-doc-passport, .select-doc-birth {
+  display: flex;
+  align-items: center;
+  height: 50%;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+.select-doc-passport {
+  border-bottom: 1px solid #C4C4C4;
+}
+
+.select-doc-birth {
 
 }
 
-.docs-option {
+.pass-docs-series, .pass-docs-number, .pass-docs-birth {
+  margin: 35px 35px 33px 0;
+}
+
+.docs-series-label > p, .pass-docs-select > p, .docs-number-label > p, .docs-birth-label > p {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #928F94;
+  margin-bottom: 10px;
+}
+
+.docs-series-input, .docs-number-input, .docs-birth-input {
+  width: 205px;
+  height: 50px;
+  border: 1px solid #928F94;
+  border-radius: 5px;
+  padding-left: 10px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #292929;
+}
+
+
+.pass-docs-birth {
 
 }
 
-.pass-docs-series {
+.docs-birth-label {
+
+}
+
+.docs-birth-input {
 
 }
 
@@ -223,9 +395,6 @@
 
 }
 
-.pass-docs-number {
-
-}
 
 .docs-number-label {
 
@@ -240,5 +409,31 @@
 }
 
 .pass-button {
+  margin: 37px 31px 28px 626px;
+  width: 303px;
+  height: 52px;
+  border: 1px solid #292929;
+  border-radius: 5px;
+  background-color: transparent;
+  font-family: 'Roboto-bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  color: #292929;
+  cursor: pointer;
+}
 
+.pass-button:hover {
+  font-family: 'Roboto-bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  color: #FFA800;
+  border: 1px solid #292929;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 5px;
 }
