--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -27,6 +27,10 @@
   background: rgba(0, 0, 0, 0.6);
 }
 
+.header-logo > a {
+  text-decoration: none;
+}
+
 .header-logo-text {
   width: 104px;
   height: 49px;
