--- a/src/styles/passenger.css
+++ b/src/styles/passenger.css
@@ -1,3 +1,63 @@
+/* List passengers */
+
+.list-passengers {
+
+}
+
+.add-passengers {
+  display: flex;
+  width: 960px;
+  height: 97px;
+  margin-top: 45px;
+  margin-bottom: 100px;
+  background-color: #FFFFFF;
+  border: 1px solid #C4C4C4;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.add-passenger-title {
+  margin-left: 25px;
+  align-self: center;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 35px;
+  color: #292929;
+}
+
+.add-passenger-img {
+  display: flex;
+  width: 18px;
+  height: 18px;
+  background-image: url(../images/plus.png);
+  cursor: pointer;
+  margin-right: 38px;
+  margin-left: auto;
+  align-self: center;
+}
+
+.list-passenger-btn {
+  display: block;
+  width: 222px;
+  height: 60px;
+  background: #928F94;
+  border-radius: 5px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  border: none;
+  cursor: pointer;
+  margin-left: auto;
+}
+
+/* Passenger */
+
 .passenger {
   width: 960px;
   background-color: #FFFFFF;
@@ -422,6 +482,7 @@
 }
 
 .pass-button {
+  display: block;
   margin: 37px 31px 28px auto;
   width: 303px;
   height: 52px;
@@ -489,4 +550,15 @@
   font-size: 18px;
   line-height: 21px;
   color: #292929;
+  white-space: pre-line
+}
+
+.pass-valid-text-ok {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+  align-self: center;
 }
