--- a/src/styles/passenger.css
+++ b/src/styles/passenger.css
@@ -8,11 +8,11 @@
   display: flex;
   width: 960px;
   height: 97px;
-  margin-top: 45px;
   margin-bottom: 100px;
   background-color: #FFFFFF;
   border: 1px solid #C4C4C4;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .add-passenger-title {
@@ -31,7 +31,7 @@
   width: 18px;
   height: 18px;
   background-image: url(../images/plus.png);
-  cursor: pointer;
+  /* cursor: pointer; */
   margin-right: 38px;
   margin-left: auto;
   align-self: center;
@@ -63,6 +63,7 @@
   background-color: #FFFFFF;
   border: 1px solid #C4C4C4;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  margin-bottom: 45px;
 }
 
 .pass-header {
