--- a/src/styles/coaches.css
+++ b/src/styles/coaches.css
@@ -673,7 +673,7 @@
 }
 
 
-.coach-button, .coach-button-inactive {
+.coach-button, .coach-button-disable {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -708,6 +708,11 @@
 
 .coach-button-inactive {
   background-color: #928F94;
+}
+
+.coach-button-disable {
+  background-color: #928F94;
+  cursor: not-allowed;
 }
 
 .scheme-seats-first, .scheme-seats-second, .scheme-seats-third, .scheme-seats-fourth {
@@ -895,8 +900,8 @@
   font-size: 24px;
   line-height: 28px;
   color: #000000;
-  margin-top: 45px;
-  padding-bottom: 45px;
+  /* margin-top: 45px; */
+  padding: 45px 20px 45px 20px;
   border-bottom: 1px dashed #928F94;
 }
 
