--- a/src/styles/passenger.css
+++ b/src/styles/passenger.css
@@ -31,17 +31,15 @@
   width: 18px;
   height: 18px;
   background-image: url(../images/plus.png);
-  /* cursor: pointer; */
   margin-right: 38px;
   margin-left: auto;
   align-self: center;
 }
 
-.list-passenger-btn {
+.list-passenger-btn, .list-passenger-btn-ok {
   display: block;
   width: 222px;
   height: 60px;
-  background: #928F94;
   border-radius: 5px;
   font-family: 'Roboto';
   font-style: normal;
@@ -52,8 +50,22 @@
   text-transform: uppercase;
   color: #FFFFFF;
   border: none;
-  cursor: pointer;
   margin-left: auto;
+}
+
+.list-passenger-btn {
+  background-color: #928F94;
+  cursor: not-allowed;
+}
+
+.list-passenger-btn-ok {
+  background-color: #FFA800;
+  cursor: pointer;
+}
+
+.list-passenger-btn-ok:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
 
 /* Passenger */
