--- a/src/styles/passenger.css
+++ b/src/styles/passenger.css
@@ -571,7 +571,7 @@
   font-size: 18px;
   line-height: 21px;
   color: #292929;
-  white-space: pre-line
+  white-space: pre-line;
 }
 
 .pass-valid-text-ok {
