--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -107,6 +107,11 @@
   border-radius: 3px;
   padding-left: 20px;
   border: none;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
 }
 
 .sub-form-input::placeholder {
