--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -81,9 +81,9 @@
   text-align: center;
 }
 
-.cal-table > tbody > tr > td {
+/* .cal-table > tbody > tr > td {
   cursor: pointer;
-}
+} */
 
 .cal-table > tbody > tr > td:hover {
   background-color: #C4C4C4;
@@ -93,8 +93,13 @@
   height: 30px;
 }
 
+.date-month {
+  cursor: pointer;
+}
+
 .date-other-month {
   color: #00000030;
+  cursor: not-allowed;
 }
 
 .date-today {
